Moved AlienShip class to separate file

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <section class="ships"></section>
 
     <section class="button">
-        <button class="fire-button">Start Game</button>
+        <button class="button__fire-button">Start Game</button>
     </section>
 
-    <script src="/script.js"></script>     
+    <script type="module" src="/script.js"></script>     
 </body>
 </html>
