Added game instructions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="ships"></section>
+    <section class="intro"></section>
 
     <section class="button">
         <button class="button__fire-button">Start Game</button>
