--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostile Aliens</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -15,6 +15,6 @@
         <button class="button__fire-button">Start Game</button>
     </section>
 
-    <script type="module" src="/script.js"></script>     
+    <script type="module" src="./script.js"></script>     
 </body>
 </html>
